modif refonte page scratch

--- a/html/INDEX/jeu_video.html
+++ b/html/INDEX/jeu_video.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="../../css/jeu.css">
     <link rel="stylesheet" href="../../css/dut mmi.css">
-
 </head>
 
 <body>
@@ -28,18 +27,17 @@
     </div>
 
     <div class="jeu_ligne_case">
-        <a class="dut_projet" href="../../html/DUT MMI/scratch.html">
+        <a class="dut_projet" href="../../html/projets/jeux/scratch.html">
             <img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Room 203.jpg" />
         </a>
-        <a class="dut_projet" href="../../html/DUT MMI/crystal.html">
+        <a class="dut_projet" href="../../html/projets/jeux/crystal.html">
             <img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Cristal's quest.jpg" />
         </a>
-        <a class="dut_projet" href="../../html/DUT MMI/nanimo.html">
+        <a class="dut_projet" href="../../html/projets/jeux/nanimo.html">
             <img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Nanimo.jpg" />
         </a>
-        <a class="dut_projet" href="../../html/DUT MMI/twr.html">
+        <a class="dut_projet" href="../../html/projets/jeux/twr.html">
             <img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Those Who Remain.jpg" />
-
         </a>
     </div>
     <div class="jeu_ligne_case">
@@ -50,8 +48,6 @@
     <iframe class="include" src="../0commons/footer.html" seamless></iframe>
     <!------------------------------------------------------ SCRIPTS ------------------------------------------------>
     <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script src="../../js/flickity.pkgd.js"></script>
     <script src="../../js/navbar.js"></script>
     <!--------------------------------------------------------------------------------------------------------------->
 
