--- a/html/INDEX/photographie.html
+++ b/html/INDEX/photographie.html
@@ -9,7 +9,7 @@
 
     <title>Alvina Damasio--Razafiarizaka | Photographie</title>
 
-    <link rel="stylesheet" href="../../css/style.css" id="theme-link">
+    <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="../../css/dut mmi.css">
     <link rel="stylesheet" href="../../css/photomontage.css">
 
@@ -28,21 +28,22 @@
             <div class="lien_photomontage">
                 <img class="photomontage_image" src="../../RESSOURCES/0 - Photographies/HOME/I16.jpg" alt="Photomontage sur le Petit Prince d'une île volante. Rose, renard, avion. Boîte." />
                 <p class="date_photomontage"><span class="contour"> | </span>HOME<span class="contour"> | </span></p>
-                <a class="lien_projet" href="../DUT MMI/photo_home.html">Voir le projet</a>
+                <a class="lien_projet" href="../projets/photos/photo_home.html">Voir le projet</a>
             </div>
             <div class="lien_photomontage">
                 <img class="photomontage_image" src="../../RESSOURCES/0 - Photographies/MMI BX/b1.jpg" alt="Photomontage d'un immense cerf blanc qui regarde deux fillettes perdues dans les montagnes." />
                 <p class="date_photomontage"><span class="contour"> | </span>MMI BX<span class="contour"> | </span></p>
-                <a class="lien_projet" href="../DUT MMI/photo_mmibx.html">Voir le projet</a>
+                <a class="lien_projet" href="../projets/photos/photo_mmibx.html">Voir le projet</a>
             </div>
         </div>
+        <br><br><br><br><br>
     </div>
     <!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
-    <iframe class="include" src="../0commons/footer.html" seamless></iframe>
+    <iframe class="include " src="../0commons/footer.html " seamless></iframe>
     <!------------------------------------------------------ SCRIPTS ------------------------------------------------>
-    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
-    <script src="../../js/navbar.js"></script>
+    <script src="https://kit.fontawesome.com/68b1f887b3.js " crossorigin="anonymous "></script>
+    <script src="../../js/navbar.js "></script>
     <!--------------------------------------------------------------------------------------------------------------->
 
 </body>
