--- a/html/presentation.html
+++ b/html/presentation.html
@@ -39,9 +39,7 @@
             <p class="explication_text_present">Pour toute demande vous pouvez me contacter à l'adresse mail : <a class="lien" href="mailto:alvinadr24@gmail.com">alvinadr24@gmail.com</a>.
             </p>
         </div>
-        <div class="column_simple column_space">
-
-        </div>
+        <div class="column_simple column_space"></div>
         <div class="column_simple" id="half">
             <h2 class="present_middle_present">Logiciels maîtrisés :</h2>
             <div class="row_simple left">
