--- a/html/projets/infographie/infographie.html
+++ b/html/projets/infographie/infographie.html
@@ -9,16 +9,16 @@
 
     <title>Alvina Damasio--Razafiarizaka | Cover d'album</title>
 
-    <link rel="stylesheet" href="../../css/style.css" id="theme-link">
-    <link rel="stylesheet" href="../../css/photomontage.css">
-    <link rel="stylesheet" href="../../css/dut mmi.css">
+    <link rel="stylesheet" href="../../../css/style.css" id="theme-link">
+    <link rel="stylesheet" href="../../../css/photomontage.css">
+    <link rel="stylesheet" href="../../../css/dut mmi.css">
 
 </head>
 
 <body>
     <!--------------------------------------------------------- MENU ------------------------------------------------------>
 
-    <iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
+    <iframe class="include fix" src="../../0commons/navbar.html" seamless></iframe>
     <!----------------------------------------------------------- IMAGES -------------------------------------------------------->
     <a href="#" class="bouton_remonter">▲</a>
 
