--- a/index.html
+++ b/index.html
@@ -24,14 +24,12 @@
 
 
         <div class="present_case1">
-
-            <h1 class="present_big">Alvina DR</h1>
+            <p class="present_title">- GRAPHISME, JEU VIDÉO ET CRÉATION D'HISTOIRE -</p>
+            <p class="present_text"><span class="contour"> | </span> 1ère année DUT MMI <span class="contour"> | </span>
+            </p>
+            <h1 class="present_big">Graphisme</h1>
         </div>
-        <br><br><br>
         <p class="present_date">[ PORTFOLIO 2021 ]</p>
-        <br>
-        <p class="present_text"><span class="contour"> | </span> 1ère année DUT MMI <span class="contour"> | </span>
-        </p>
         <section class="social_menu index">
             <ul>
                 <li><a href="https://www.linkedin.com/in/alvina-damasio-razafiarizaka-510a981b8"><i
@@ -44,7 +42,6 @@
         <div class="move_mouse">
             <a>
                 <section id="presentation" class="demo">
-                    <!--Souris -->
                     <a><span></span></a></a>
             </section>
         </div>
@@ -53,126 +50,118 @@
     <div class="presentation_category">
         <!--PRÉSENTATION DES DIFFÉRENTES CATÉGORIES DE TRAVAUX-->
 
-        <div class="row_simple cadre_present">
-            <!--PHOTOMONTAGE-->
-            <a class="lien_image" href="./html/INDEX/photomontage.html">
-                <div class="example-1 card">
-                    <div class="wrapper">
-                        <img class="couverture" src="./RESSOURCES/Couverture_Photomontage.jpg" alt="Alvina DR - Illustration d'un pont entre deux falaises en bord de mer." />
-                        <div class="data">
-                            <div class="content">
-                                <p class="category_title"><span class="contour"> | </span>PHOTOMONTAGES</p>
-                                <p class="text">J'utilise photoshop depuis que j'ai onze ans et avec le temps j'ai commencé à réaliser des illustrations. Chacune d'elles raconte une histoire, même si dans la plupart des cas il n'y a que la couverture d'un livre.</p>
-                            </div>
+        <!--PHOTOMONTAGE-->
+        <a class="lien_image" href="./html/INDEX/photomontage.html">
+            <div class="example-1 card">
+                <div class="wrapper">
+                    <img class="couverture" src="./RESSOURCES/Couverture_Photomontage.jpg" alt="Alvina DR - Illustration d'un pont entre deux falaises en bord de mer." />
+                    <div class="data">
+                        <div class="content">
+                            <p class="category_title"><span class="contour"> | </span>PHOTOMONTAGES</p>
+                            <p class="text">J'utilise photoshop depuis que j'ai onze ans et avec le temps j'ai commencé à réaliser des illustrations. Chacune d'elles raconte une histoire, même si dans la plupart des cas il n'y a que la couverture d'un livre.</p>
                         </div>
                     </div>
                 </div>
-            </a>
-            <!--ESPACEMENT-->
-
-            <!--JEUX VIDÉOS-->
-            <a class="lien_image" href="./html/INDEX/jeu_video.html">
-                <div class="example-1 card">
-                    <div class="wrapper">
-                        <img class="couverture" src="./RESSOURCES/Couverture_Jeu_Vidéo.jpg" alt="Alvina DR - Écran titre jeu vidéo Crystal's Quest" />
-                        <div class="data">
-                            <div class="content">
-                                <p class="category_title"><span class="contour"> | </span>JEUX VIDÉOS</p>
-                                <p class="text">Je bidouille des jeux vidéos dans mon coin depuis que je suis en sixième. D'abord attirée par la création de RPG je fais des pokémons-like sur RPG Maker avant de découvrir Unity et la 3D ! </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </a>
-
-            <br><br><br>
-            <!--ESPACEMENT-->
-        </div>
+            </div>
+        </a>
         <br><br><br>
+        <!--ESPACEMENT-->
 
-
-        <div class="row_simple cadre_present">
-            <!--PHOTOGRAPHIE-->
-            <a class="lien_image" href="./html/INDEX/photographie.html">
-                <div class="example-1 card">
-                    <div class="wrapper">
-                        <img class="couverture" src="./RESSOURCES/Couverture_Photographie.jpg" alt="Alvina DR - Photographie d'une rainette verte." />
-                        <div class="data">
-                            <div class="content">
-                                <p class="category_title"><span class="contour"> | </span>PHOTOGRAPHIE</p>
-                                <p class="text">Voilà quelques photos que j'ai prise.</p>
-                            </div>
+        <!--3D-->
+        <a class="lien_image" href="./html/INDEX/3d.html">
+            <div class="example-1 card">
+                <div class="wrapper">
+                    <img class="couverture" src="./RESSOURCES/Couverture_3D.jpg" alt="Alvina DR - Image d'une araignée cachée en-dessous d'un canapé." />
+                    <div class="data">
+                        <div class="content">
+                            <p class="category_title"><span class="contour"> | </span>3D</p>
+                            <p class="text">
+                                La 3D m'a toujours intéressé parce qu'elle offre une autre dimension que le dessin, elle permet de vivre dans la scène. Voilà quelques rendus 3D et une modélisation du Tardis faits par mes soins.</p>
                         </div>
                     </div>
                 </div>
-            </a>
-            <br><br><br>
-            <!--ESPACEMENT-->
-
-            <!--3D-->
-            <a class="lien_image" href="./html/INDEX/3d.html">
-                <div class="example-1 card">
-                    <div class="wrapper">
-                        <img class="couverture" src="./RESSOURCES/Couverture_3D.jpg" alt="Alvina DR - Image d'une araignée cachée en-dessous d'un canapé." />
-                        <div class="data">
-                            <div class="content">
-                                <p class="category_title"><span class="contour"> | </span>3D</p>
-                                <p class="text">
-                                    La 3D m'a toujours intéressé parce qu'elle offre une autre dimension que le dessin, elle permet de vivre dans la scène. Voilà quelques rendus 3D et une modélisation du Tardis faits par mes soins.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </a>
-
-        </div>
+            </div>
+        </a>
         <br><br><br>
+        <!--ESPACEMENT-->
 
-        <div class="row_simple cadre_present">
-            <!--VIDÉOS-->
-            <a class="lien_image" href="./html/INDEX/video.html">
-                <div class="example-1 card">
-                    <div class="wrapper">
-                        <img class="couverture" src="./RESSOURCES/Couverture_Vidéo.jpg" alt="Alvina DR - Photographie d'un monstre au bout d'un tunnel." />
-                        <div class="data">
-                            <div class="content">
-                                <p class="category_title"><span class="contour"> | </span>AUDIOVISUEL</p>
-                                <p class="text">
-                                    Toutes les vidéos de ma chaîne YouTube sont disponibles ici. Il y a des making-of de photomontages, des vidéos faites en classe et des expérimentations de court-métrage.</p>
-                            </div>
+        <!--PHOTOGRAPHIE-->
+        <a class="lien_image" href="./html/INDEX/photographie.html">
+            <div class="example-1 card">
+                <div class="wrapper">
+                    <img class="couverture" src="./RESSOURCES/Couverture_Photographie.jpg" alt="Alvina DR - Photographie d'une rainette verte." />
+                    <div class="data">
+                        <div class="content">
+                            <p class="category_title"><span class="contour"> | </span>PHOTOGRAPHIE</p>
+                            <p class="text">Voilà quelques photos que j'ai prise.</p>
                         </div>
                     </div>
                 </div>
-            </a>
-            <br><br><br>
-            <!--ESPACEMENT-->
+            </div>
+        </a>
+        <br><br><br>
+        <!--ESPACEMENT-->
 
-            <!--WEB-->
-            <a class="lien_image" href="./html/INDEX/web.html">
-                <div class="example-1 card">
-                    <div class="wrapper">
-                        <img class="couverture" src="./RESSOURCES/Couverture_Web.jpg" alt="Alvina DR - Exemple d'un site web dans un mockup d'ordinateur." />
-                        <div class="data">
-                            <div class="content">
-                                <p class="category_title"><span class="contour"> | </span>WEB</p>
-                                <p class="text">Création de site.</p>
-                            </div>
+        <!--JEUX VIDÉOS-->
+        <a class="lien_image" href="./html/INDEX/jeu_video.html">
+            <div class="example-1 card">
+                <div class="wrapper">
+                    <img class="couverture" src="./RESSOURCES/Couverture_Jeu_Vidéo.jpg" alt="Alvina DR - Écran titre jeu vidéo Crystal's Quest" />
+                    <div class="data">
+                        <div class="content">
+                            <p class="category_title"><span class="contour"> | </span>JEUX VIDÉOS</p>
+                            <p class="text">Je bidouille des jeux vidéos dans mon coin depuis que je suis un sixième. D'abord attiré par la création de RPG je fais des pokémons-like sur RPG Maker avant de découvrir Unity et la 3D ! Aujourd'hui, je participe à des games
+                                jams et je peux continuer ma </p>
                         </div>
                     </div>
                 </div>
-            </a>
-            <br><br><br>
-            <!--ESPACEMENT-->
+            </div>
+        </a>
+        <br><br><br>
+        <!--ESPACEMENT-->
 
-            <!--a class="lien_image" href="./html/INDEX/ecriture.html">
+        <!--VIDÉOS-->
+        <a class="lien_image" href="./html/INDEX/video.html">
+            <div class="example-1 card">
+                <div class="wrapper">
+                    <img class="couverture" src="./RESSOURCES/Couverture_Vidéo.jpg" alt="Alvina DR - Photographie d'un monstre au bout d'un tunnel." />
+                    <div class="data">
+                        <div class="content">
+                            <p class="category_title"><span class="contour"> | </span>VIDÉOS</p>
+                            <p class="text">
+                                Toutes les vidéos de ma chaîne YouTube sont disponibles ici. Il y a des making-of de photomontages, des vidéos faites en classe et des expérimentations de court-métrage.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </a>
+        <br><br><br>
+        <!--ESPACEMENT-->
+
+        <!--WEB-->
+        <a class="lien_image" href="./html/INDEX/web.html">
+            <div class="example-1 card">
+                <div class="wrapper">
+                    <img class="couverture" src="./RESSOURCES/Couverture_Web.jpg" alt="Alvina DR - Exemple d'un site web dans un mockup d'ordinateur." />
+                    <div class="data">
+                        <div class="content">
+                            <p class="category_title"><span class="contour"> | </span>WEB</p>
+                            <p class="text">Création de site.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </a>
+        <br><br><br>
+        <!--ESPACEMENT-->
+
+        <!--a class="lien_image" href="./html/INDEX/ecriture.html">
 				<img class="couverture" src="./RESSOURCES/Couverture_Ecriture.jpg"/>
 				<p class="category_title"><span class="contour"> | </span>ÉCRITURE<span class="contour"> | </span></p>
 		   </a-->
 
-            <!-- FIN FIN FIN PRÉSENTATION DES DIFFÉRENTES CATÉGORIES DE TRAVAUX-->
-        </div>
+        <!-- FIN FIN FIN PRÉSENTATION DES DIFFÉRENTES CATÉGORIES DE TRAVAUX-->
     </div>
-    <br><br><br>
 
 
 
