--- a/html/INDEX/3d.html
+++ b/html/INDEX/3d.html
@@ -9,10 +9,8 @@
 
     <title>Alvina Damasio--Razafiarizaka | 3D</title>
 
-    <link rel="stylesheet" href="../../css/style.css" id="theme-link">
+    <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="../../css/photomontage.css">
-    <link rel="stylesheet" href="../../css/flickity.css">
-
 </head>
 
 <body>
@@ -65,8 +63,6 @@
         <iframe class="include" src="../0commons/footer.html" seamless></iframe>
         <!------------------------------------------------------ SCRIPTS ------------------------------------------------>
         <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-        <script src="../../js/flickity.pkgd.js"></script>
         <script src="../../js/navbar.js"></script>
         <!--------------------------------------------------------------------------------------------------------------->
 
