--- a/html/INDEX/ecriture.html
+++ b/html/INDEX/ecriture.html
@@ -1,66 +1,65 @@
 <!DOCTYPE html>
 <html lang="fr">
-	<head>
-		<meta charset="utf-8"/>
-		<link rel="icon" href="../../icon.ico" />
-		<meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie"/>
-		<meta name=”viewport” content=”width=device-width, initial-scale=1>
 
-		<title>Alvina Damasio--Razafiarizaka | Écriture</title>
+<head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="../../icon.ico" />
+    <meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie" />
+    <meta name=”viewport” content=”width=device-width, initial-scale=1>
 
-		<link rel="stylesheet" href="../../css/style.css" id="theme-link">
-		<link rel="stylesheet" href="../../css/dut mmi.css">
-		<link rel="stylesheet" href="../../css/flickity.css">
+    <title>Alvina Damasio--Razafiarizaka | Écriture</title>
 
-	</head>
-	<body>
-<!--------------------------------------------------------- MENU ------------------------------------------------------>
+    <link rel="stylesheet" href="../../css/style.css ">
+    <link rel="stylesheet " href="../../css/dut mmi.css ">
+</head>
 
-<iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
-<!--------------------------------------------------- PHOTOGRAPHIES ------------------------------------------------>
-<p class="presentation_text">Voilà quelques photos que j'ai prise.</p>
+<body>
+    <!--------------------------------------------------------- MENU ------------------------------------------------------>
 
-<div class="gallerie">
-<div class="dut_ligne_case">
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I1.jpg"/></a> 
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I2.jpg"/></a>
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I16.jpg"/></a>
-</div>
-<div class="dut_ligne_case">
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I3.jpg"/></a>
-</div>
-<div class="dut_ligne_case">
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I4.jpg"/></a> 
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I6.jpg"/></a>
-</div>
-<div class="dut_ligne_case">
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I7.jpg"/></a> 
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I8.png"/></a>
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I10.jpg"/></a>
-</div>
-<div class="dut_ligne_case">
-	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I14.jpg"/></a>
-</div>
-<div class="dut_ligne_case">
-	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I13.jpg"/></a>
-	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I12.jpg"/></a>
-	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I11.jpg"/></a> 
-</div>
-<div class="dut_ligne_case">
-	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I5.jpg"/></a> 
-	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I17.jpg"/></a>
-</div>
-</div>
+    <iframe class="include fix " src="../0commons/navbar.html " seamless></iframe>
+    <!--------------------------------------------------- PHOTOGRAPHIES ------------------------------------------------>
+    <p class="presentation_text ">Voilà quelques photos que j'ai prise.</p>
 
-<!------------------------------------------------------ FOOTER ------------------------------------------------------>
+    <div class="gallerie ">
+        <div class="dut_ligne_case ">
+            <a class="dut_projet "> <img class="gallerie_photo " src="../../RESSOURCES/0 - Photographies/I1.jpg " /></a>
+            <a class="dut_projet "> <img class="gallerie_photo " src="../../RESSOURCES/0 - Photographies/I2.jpg " /></a>
+            <a class="dut_projet "> <img class="gallerie_photo " src="../../RESSOURCES/0 - Photographies/I16.jpg " /></a>
+        </div>
+        <div class="dut_ligne_case ">
+            <a class="dut_projet "> <img class="gallerie_photo " src="../../RESSOURCES/0 - Photographies/I3.jpg " /></a>
+        </div>
+        <div class="dut_ligne_case ">
+            <a class="dut_projet "> <img class="gallerie_photo " src="../../RESSOURCES/0 - Photographies/I4.jpg " /></a>
+            <a class="dut_projet "> <img class="gallerie_photo " src="../../RESSOURCES/0 - Photographies/I6.jpg " /></a>
+        </div>
+        <div class="dut_ligne_case ">
+            <a class="dut_projet "> <img class="gallerie_photo " src="../../RESSOURCES/0 - Photographies/I7.jpg " /></a>
+            <a class="dut_projet "> <img class="gallerie_photo " src="../../RESSOURCES/0 - Photographies/I8.png " /></a>
+            <a class="dut_projet "> <img class="gallerie_photo " src="../../RESSOURCES/0 - Photographies/I10.jpg " /></a>
+        </div>
+        <div class="dut_ligne_case ">
+            <a class="dut_projet "> <img class="gallerie_photo " src="../../RESSOURCES/0 - Photographies/I14.jpg " /></a>
+        </div>
+        <div class="dut_ligne_case ">
+            <a class="dut_projet "> <img class="gallerie_photo " src="../../RESSOURCES/0 - Photographies/I13.jpg " /></a>
+            <a class="dut_projet "> <img class="gallerie_photo " src="../../RESSOURCES/0 - Photographies/I12.jpg " /></a>
+            <a class="dut_projet "> <img class="gallerie_photo " src="../../RESSOURCES/0 - Photographies/I11.jpg " /></a>
+        </div>
+        <div class="dut_ligne_case ">
+            <a class="dut_projet "> <img class="gallerie_photo " src="../../RESSOURCES/0 - Photographies/I5.jpg " /></a>
+            <a class="dut_projet "> <img class="gallerie_photo " src="../../RESSOURCES/0 - Photographies/I17.jpg " /></a>
+        </div>
+    </div>
 
-<iframe class="include" src="../0commons/footer.html" seamless></iframe>
-<!------------------------------------------------------ SCRIPTS ------------------------------------------------>
-<script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-<script src="../../js/flickity.pkgd.js"></script>
-<script src="../../js/navbar.js"></script>
-<!--------------------------------------------------------------------------------------------------------------->
+    <!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
-	</body>
+    <iframe class="include " src="../0commons/footer.html " seamless></iframe>
+    <!------------------------------------------------------ SCRIPTS ------------------------------------------------>
+    <script src="https://kit.fontawesome.com/68b1f887b3.js " crossorigin="anonymous "></script>
+    <script src="../../js/navbar.js "></script>
+    <!--------------------------------------------------------------------------------------------------------------->
+
+</body>
+
 </html>
