--- a/html/INDEX/video.html
+++ b/html/INDEX/video.html
@@ -1,45 +1,44 @@
 <!DOCTYPE html>
 <html lang="fr">
-	<head>
-		<meta charset="utf-8"/>
-		<link rel="icon" href="../../icon.ico" />
-		<meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie"/>
-		<meta name=”viewport” content=”width=device-width, initial-scale=1>
 
-		<title>Alvina Damasio--Razafiarizaka | Vidéo</title>
+<head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="../../icon.ico" />
+    <meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie" />
+    <meta name=”viewport” content=”width=device-width, initial-scale=1>
 
-		<link rel="stylesheet" href="../../css/style.css" id="theme-link">
-		<link rel="stylesheet" href="../../css/video.css" id="theme-link">
-		<link rel="stylesheet" href="../../css/flickity.css">
+    <title>Alvina Damasio--Razafiarizaka | Vidéo</title>
 
-	</head>
-	<body>
-<!--------------------------------------------------------- MENU ------------------------------------------------------>
+    <link rel="stylesheet" href="../../css/style.css">
+    <link rel="stylesheet" href="../../css/video.css">
+</head>
 
-<iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
-<!--------------------------------------------------- PHOTOGRAPHIES ------------------------------------------------>
-<a href="#" class="bouton_remonter">▲</a>
+<body>
+    <!--------------------------------------------------------- MENU ------------------------------------------------------>
 
-<p class="presentation_text">Toutes les vidéos de ma chaîne YouTube sont disponibles ici. Il y a des making-of de photomontages, des vidéos faites en classe et des expérimentations de court-métrage.</p>
+    <iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
+    <!--------------------------------------------------- PHOTOGRAPHIES ------------------------------------------------>
+    <a href="#" class="bouton_remonter">▲</a>
 
-<div class="video_total"> 
-	<iframe width="960" height="540px"class="video" src="https://www.youtube.com/embed/ozApC06xylI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	<iframe width="960" height="540px"class="video" src="https://www.youtube.com/embed/XvsrA4PbQlI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	<iframe width="960" height="540px"class="video" src="https://www.youtube.com/embed/Y_rxclOkZ1Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	<iframe width="960" height="540px"class="video" src="https://www.youtube.com/embed/JyeG7LvVOWo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	<iframe width="960" height="540px"class="video" src="https://www.youtube.com/embed/_JOVXJx4CW8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	<iframe width="960" height="540px"class="video" src="https://www.youtube.com/embed/FRcjSFYnp40" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p class="presentation_text">Toutes les vidéos de ma chaîne YouTube sont disponibles ici. Il y a des making-of de photomontages, des vidéos faites en classe et des expérimentations de court-métrage.</p>
 
-</div>
-<!------------------------------------------------------ FOOTER ------------------------------------------------------>
+    <div class="video_total">
+        <iframe width="960" height="540px" class="video" src="https://www.youtube.com/embed/ozApC06xylI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="960" height="540px" class="video" src="https://www.youtube.com/embed/XvsrA4PbQlI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="960" height="540px" class="video" src="https://www.youtube.com/embed/Y_rxclOkZ1Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="960" height="540px" class="video" src="https://www.youtube.com/embed/JyeG7LvVOWo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="960" height="540px" class="video" src="https://www.youtube.com/embed/_JOVXJx4CW8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="960" height="540px" class="video" src="https://www.youtube.com/embed/FRcjSFYnp40" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-<iframe class="include" src="../0commons/footer.html" seamless></iframe>
-<!------------------------------------------------------ SCRIPTS ------------------------------------------------>
-<script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-<script src="../../js/flickity.pkgd.js"></script>
-<script src="../../js/navbar.js"></script>
-<!--------------------------------------------------------------------------------------------------------------->
+    </div>
+    <!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
-	</body>
+    <iframe class="include" src="../0commons/footer.html" seamless></iframe>
+    <!------------------------------------------------------ SCRIPTS ------------------------------------------------>
+    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
+    <script src="../../js/navbar.js"></script>
+    <!--------------------------------------------------------------------------------------------------------------->
+
+</body>
+
 </html>
