--- a/html/projets/jeux/crystal.html
+++ b/html/projets/jeux/crystal.html
@@ -3,21 +3,19 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="../../icon.ico" />
+    <link rel="icon" href="../../../icon.ico" />
     <meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie" />
     <meta name=”viewport” content=”width=device-width, initial-scale=1>
 
     <title>Alvina Damasio--Razafiarizaka | Crystal's Quest</title>
 
-    <link rel="stylesheet" href="../../css/style.css" id="theme-link">
-    <link rel="stylesheet" href="../../css/flickity.css">
-
+    <link rel="stylesheet" href="../../../css/style.css">
 </head>
 
 <body>
     <!--------------------------------------------------------- MENU ------------------------------------------------------>
 
-    <iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
+    <iframe class="include fix" src="../../0commons/navbar.html" seamless></iframe>
     <!----------------------------------------------------------- ATELIER ------------------------------------------------------->
     <a href="#" class="bouton_remonter">▲</a>
 
@@ -26,7 +24,7 @@
             <p class="explication_text">Le deuxième projet vidéoludique dont j'ai fait partie était également un atelier MMI. La consigne était de réaliser un "Zelda Like" en quelques jours sur Unity (moteur de Jeu). Nous étions par groupe de 5 cette fois-ci. Crystal's Quest est
                 un jeu post-apocalyptique où le héros peut voyager entre le présent en ruines et le passé encore intact ante-explosion. Le but est de retrouver les trois cristaux pour les ramener au professeur qui s'en servira pour annuler l'explosion
                 dans le futur.</p>
-            <img class="gallerie_image" src="../../RESSOURCES/Couverture_Jeu_Vidéo.jpg" />
+            <img class="gallerie_image" src="../../../RESSOURCES/Couverture_Jeu_Vidéo.jpg" />
         </div>
     </div>
 
@@ -43,12 +41,10 @@
 
     <!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
-    <iframe class="include" src="../0commons/footer.html" seamless></iframe>
+    <iframe class="include" src="../../0commons/footer.html" seamless></iframe>
     <!------------------------------------------------------ SCRIPTS ------------------------------------------------>
     <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script src="../../js/flickity.pkgd.js"></script>
-    <script src="../../js/navbar.js"></script>
+    <script src="../../../js/navbar.js"></script>
     <!--------------------------------------------------------------------------------------------------------------->
 </body>
 
