--- a/html/projets/jeux/nanimo.html
+++ b/html/projets/jeux/nanimo.html
@@ -3,39 +3,41 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="../../icon.ico" />
+    <link rel="icon" href="../../../icon.ico" />
     <meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie" />
     <meta name=”viewport” content=”width=device-width, initial-scale=1>
 
     <title>Alvina Damasio--Razafiarizaka | Nanimo</title>
 
-    <link rel="stylesheet" href="../../css/style.css" id="theme-link">
-    <link rel="stylesheet" href="../../css/jeu.css">
-
+    <link rel="stylesheet" href="../../../css/style.css">
+    <link rel=" stylesheet " href="../../../css/jeu.css ">
 </head>
 
 <body>
     <!--------------------------------------------------------- MENU ------------------------------------------------------>
 
-    <iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
+    <iframe class="include fix " src="../../0commons/navbar.html " seamless></iframe>
     <!----------------------------------------------------------- ATELIER ------------------------------------------------------->
-    <a href="#" class="bouton_remonter">▲</a>
+    <a href="# " class="bouton_remonter ">▲</a>
 
-    <div class="row_simple" id="start">
-        <div class="column_simple" id="half">
-            <p class="explication_text">C'est fin Janvier 2021 que j'ai participé à ma première Game Jam. Le thème était "Lost And Found". En équipe de cinq, en association avec deux élèves de l'INSERB, deux élèves en DUT MMI comme moi et un élève en licence pro Game Design / Level
+    <br><br><br><br><br>
+    <div class="row_simple" id="start ">
+        <div class="column_simple " id="half ">
+            <p class="explication_text ">C'est fin Janvier 2021 que j'ai participé à ma première Game Jam. Le thème était "Lost And Found ". En équipe de cinq, en association avec deux élèves de l'INSERB, deux élèves en DUT MMI comme moi et un élève en licence pro Game Design / Level
                 Design (IUT Bobigny), nous avons décidé de réaliser un jeu de puzzle.</p>
-            <p class="explication_text">Le but consiste à retrouver les animaux qui se sont échappés et à les remettre dans leurs enclos. Seulement tous les animaux ne s'entendent pas bien entre eux. Il faut donc composer chaque enclos avec soin pour éviter que la ferme ne devienne
+            <p class="explication_text ">Le but consiste à retrouver les animaux qui se sont échappés et à les remettre dans leurs enclos. Seulement tous les animaux ne s'entendent pas bien entre eux. Il faut donc composer chaque enclos avec soin pour éviter que la ferme ne devienne
                 un véritable chaos.
             </p>
-            <p class="explication_text">Sur ce projet j'ai participé à la partie design (animation des animaux, design de leurs sprites si nécessaire) puis à la conception des menus (pause, options, menu principal, crédits, etc...). J'ai aussi participé à la création de prefabs
+            <p class="explication_text ">Sur ce projet j'ai participé à la partie design (animation des animaux, design de leurs sprites si nécessaire) puis à la conception des menus (pause, options, menu principal, crédits, etc...). J'ai aussi participé à la création de prefabs
                 d'animaux sur Unity.
             </p>
             <br><br>
-            <p class="explication_text">Voilà le superbe trailer du jeu réalisé par Pauline Grellier !
+            <p class="explication_text ">Voilà le superbe trailer du jeu réalisé par Pauline Grellier !
             </p>
-            <iframe class="video_trailer" width="680 " height="350 " src="https://www.youtube.com/embed/cYzAFRk12po " frameborder="0 " allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture " allowfullscreen></iframe>
+            <iframe class="video_trailer " width="680 " height="350 " src="https://www.youtube.com/embed/cYzAFRk12po " frameborder="0 " allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture " allowfullscreen></iframe>
         </div>
+        <div class="column_space"></div>
+        <div class="column_space"></div>
         <div class="column_simple " id="half ">
             <iframe frameborder="0 " src="https://itch.io/embed-upload/3312351?color=333333 " allowfullscreen=" " width="700 " height="550 "><a href="https://shynamo.itch.io/nanimo ">Play Nanimo on itch.io</a></iframe>
             <div class="space "></div>
@@ -46,12 +48,10 @@
 
     <!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
-    <iframe class="include " src="../0commons/footer.html " seamless></iframe>
+    <iframe class="include " src="../../0commons/footer.html " seamless></iframe>
     <!------------------------------------------------------ SCRIPTS ------------------------------------------------>
     <script src="https://kit.fontawesome.com/68b1f887b3.js " crossorigin="anonymous "></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.js "></script>
-    <script src="../../js/flickity.pkgd.js "></script>
-    <script src="../../js/navbar.js "></script>
+    <script src="../../../js/navbar.js "></script>
     <!--------------------------------------------------------------------------------------------------------------->
 </body>
 
