--- a/html/projets/jeux/twr.html
+++ b/html/projets/jeux/twr.html
@@ -3,29 +3,24 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="../../icon.ico" />
+    <link rel="icon" href="../../../icon.ico" />
     <meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie" />
     <meta name=”viewport” content=”width=device-width, initial-scale=1>
 
     <title>Alvina Damasio--Razafiarizaka | Those Who Remain</title>
 
-    <link rel="stylesheet" href="../../css/style.css" id="theme-link">
+    <link rel="stylesheet" href="../../../css/style.css" id="theme-link">
 
 </head>
 
 <body>
     <!--------------------------------------------------------- MENU ------------------------------------------------------>
 
-    <iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
+    <iframe class="include fix" src="../../0commons/navbar.html" seamless></iframe>
     <!----------------------------------------------------------- ATELIER ------------------------------------------------------->
     <a href="#" class="bouton_remonter">▲</a>
 
-    <div class="row_simple" id="start">
-        <div class="column_simple">
-
-        </div>
-    </div>
-
+    <br><br><br><br><br>
     <div class="row_simple">
         <div class="column_simple" id="half">
             <p class="explication_text">Ce nouveau jeu se centraît autour de la thématique de l'accessibilité. Le but : réaliser un jeu le plus accessible possible. Il fallait pouvoir jouer uniquement à l'oreille et/ou uniquement avec la vue et ne pas avoir de commandes trop complexes.
@@ -33,16 +28,18 @@
             <p class="explication_text">Pour la première fois, j'ai effectué moi-même toute la programmation en C# sur le jeu. Je me suis aussi chargé du level design, et de toute la conception du jeu dans unity. Le reste de l'équipe s'est chargé de récupérer/concevoir toutes les
                 ressources, c'est à dire les éléments graphiques, les backgrounds du jeu (la route qui défile), l'héroïne Miraï </p>
         </div>
-        <iframe frameborder="0" src="https://itch.io/embed/983129?linkback=true" width="552" height="167"><a href="https://alvina-dr.itch.io/those-who-remain">Those Who Remain by Alvina DR, cyrilbas, Hectaris, wolffien</a></iframe>
+        <div class="column_space"></div>
+        <div class="column_simple">
+            <iframe frameborder="0" src="https://itch.io/embed/983129?linkback=true&amp;dark=true" width="700" height="167"><a href="https://alvina-dr.itch.io/those-who-remain">Those Who Remain by Alvina DR, cyrilbas, Hectaris, wolffien</a></iframe>
+        </div>
     </div>
 
     <!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
-    <iframe class="include" src="../0commons/footer.html" seamless></iframe>
+    <iframe class="include" src="../../0commons/footer.html" seamless></iframe>
     <!------------------------------------------------------ SCRIPTS ------------------------------------------------>
     <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script src="../../js/navbar.js"></script>
+    <script src="../../../js/navbar.js"></script>
     <!--------------------------------------------------------------------------------------------------------------->
 </body>
 
