rectification page d'accueil amélioration page jeux indiv et multi

--- a/html/INDEX/jeu_video.html
+++ b/html/INDEX/jeu_video.html
@@ -27,17 +27,17 @@
     </div>
 
     <div class="jeu_ligne_case">
-        <a class="dut_projet" href="../../html/projets/jeux/scratch.html">
-            <img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Room 203.jpg" />
+        <a class="dut_projet" href="../../html/projets/jeux/4twr.html">
+            <img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Those Who Remain.jpg" />
         </a>
-        <a class="dut_projet" href="../../html/projets/jeux/crystal.html">
-            <img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Cristal's quest.jpg" />
-        </a>
-        <a class="dut_projet" href="../../html/projets/jeux/nanimo.html">
+        <a class="dut_projet" href="../../html/projets/jeux/3nanimo.html">
             <img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Nanimo.jpg" />
         </a>
-        <a class="dut_projet" href="../../html/projets/jeux/twr.html">
-            <img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Those Who Remain.jpg" />
+        <a class="dut_projet" href="../../html/projets/jeux/2crystal.html">
+            <img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Cristal's quest.jpg" />
+        </a>
+        <a class="dut_projet" href="../../html/projets/jeux/1scratch.html">
+            <img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Room 203.jpg" />
         </a>
     </div>
     <div class="jeu_ligne_case">
