--- a/html/projets/jeux/2crystal.html
+++ b/html/projets/jeux/2crystal.html
@@ -20,25 +20,23 @@
     <a href="#" class="bouton_remonter">▲</a>
 
     <div class="row_simple" id="start">
-        <div class="column_simple">
+        <div class="column_simple" id="half">
             <p class="explication_text">Le deuxième projet vidéoludique dont j'ai fait partie était également un atelier MMI. La consigne était de réaliser un "Zelda Like" en quelques jours sur Unity (moteur de Jeu). Nous étions par groupe de 5 cette fois-ci. Crystal's Quest est
                 un jeu post-apocalyptique où le héros peut voyager entre le présent en ruines et le passé encore intact ante-explosion. Le but est de retrouver les trois cristaux pour les ramener au professeur qui s'en servira pour annuler l'explosion
                 dans le futur.</p>
-            <img class="gallerie_image" src="../../../RESSOURCES/Couverture_Jeu_Vidéo.jpg" />
+            <p class="explication_text">Sur ce projet je me suis occupée de toute la programmation en C# (qui était assez réduite mais restait un obstacle comme nous n'avions jamais eu de cours sur ce langage). J'ai aussi pris en charge la partie Level Design et la conception du
+                menu et des paramètres qui l'accompagnent.</p>
         </div>
-    </div>
-
-    <div class="row_simple">
-        <p class="explication_text">Sur ce projet je me suis occupée de tous la programmation en C# (qui était assez réduite mais restait un obstacle comme nous n'avions jamais eu de cours sur ce langage). J'ai aussi pris en charge la partie Level Design et la conception du menu
-            et des paramètres qui l'accompagnent.</p>
-    </div>
-    <div class="row_simple">
+        <div class="column_space"></div>
         <div class="column_simple" id="half">
-            <iframe frameborder="0" src="https://itch.io/embed/812284?linkback=true&amp;dark=true" width="1000" height="167"><a href="https://hectaris.itch.io/crystalsquestjauneprod">Crystal's Quest by Hectaris, Alvina DR</a></iframe>
-            <p class="link_text">Pour essayer le jeu cliquez <a class="lien" href="https://alvina-dr.itch.io/cristals-quest">ici</a>.</p>
+            <img class="gallerie_image" src="../../../RESSOURCES/Couverture_Jeu_Vidéo.jpg" />
+
+            <br>
+            <iframe frameborder="0" src="https://itch.io/embed/812284?linkback=true&amp;dark=true" width="100%" height="167"><a href="https://hectaris.itch.io/crystalsquestjauneprod">Crystal's Quest by Hectaris, Alvina DR</a></iframe>
         </div>
     </div>
 
+    <br><br><br>
     <!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
     <iframe class="include" src="../../0commons/footer.html" seamless></iframe>
