modification page vidéo

--- a/html/INDEX/photomontage.html
+++ b/html/INDEX/photomontage.html
@@ -40,7 +40,7 @@
             <div class="lien_photomontage">
                 <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P7.jpg" alt="Photomontage d'une jungle avec ruines aztèques. Vert, cascade, triangle, lumière, aventurier." />
                 <p class="date_photomontage"><span class="contour"> | </span>Septembre 2020<span class="contour"> | </span></p>
-                <a class="lien_projet" href="../DUT MMI/infographie.html">Voir le projet</a>
+                <a class="lien_projet" href="../projets/infographie/infographie.html">Voir le projet</a>
             </div>
             <a class="lien_photomontage">
                 <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P6.jpg" alt="Photomontage d'une immense cave souterraine avec une tour. Bleu, aventurier, pont suspendu." />
