--- a/html/projets/infographie/infographie.html
+++ b/html/projets/infographie/infographie.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="../../icon.ico" />
+    <link rel="icon" href="../../../icon.ico" />
     <meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie" />
     <meta name=”viewport” content=”width=device-width, initial-scale=1>
 
@@ -32,6 +32,7 @@
                 nous devions utiliser Photoshop et Illustrator. J'ai d'abord réalisé l'illustration de ma cover (vidéo à droite), puis je l'ai adapté à des mockups.</p>
             <p class="explication_text">C'est un atelier que j'ai particulièrement apprécié puisque je réalisais déjà des illustrations du même type durant mon temps libre (voir : <a class="lien" href="../INDEX/photomontage.html">Photomontages</a>).</p>
         </div>
+        <div class="column_space"></div>
         <div class="column-simple video" id="half">
             <iframe width="650" height="400" class="video" src="https://www.youtube.com/embed/JyeG7LvVOWo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
@@ -39,51 +40,52 @@
 
     <div class="row_simple">
         <a class="lien_photomontage">
-            <img class="photomontage_image" src="../../RESSOURCES/1 - Infographie/RENDU 1.5.jpg" />
+            <img class="photomontage_image" src="../../../RESSOURCES/1 - Infographie/RENDU 1.5.jpg" />
         </a>
         <a class="lien_photomontage">
-            <img class="photomontage_image" src="../../RESSOURCES/1 - Infographie/RENDU 2.1.jpg" />
+            <img class="photomontage_image" src="../../../RESSOURCES/1 - Infographie/RENDU 2.1.jpg" />
         </a>
         <a class="lien_photomontage">
-            <img class="photomontage_image" src="../../RESSOURCES/1 - Infographie/RENDU 3.2.jpg" />
+            <img class="photomontage_image" src="../../../RESSOURCES/1 - Infographie/RENDU 3.2.jpg" />
         </a>
     </div>
     <div class="row_simple">
         <a class="lien_photomontage">
-            <img class="photomontage_image" src="../../RESSOURCES/1 - Infographie/RENDU 4.1.jpg" />
+            <img class="photomontage_image" src="../../../RESSOURCES/1 - Infographie/RENDU 4.1.jpg" />
         </a>
         <a class="lien_photomontage">
-            <img class="photomontage_image" src="../../RESSOURCES/1 - Infographie/RENDU 5.1.jpg" />
+            <img class="photomontage_image" src="../../../RESSOURCES/1 - Infographie/RENDU 5.1.jpg" />
         </a>
         <a class="lien_photomontage">
-            <img class="photomontage_image" src="../../RESSOURCES/1 - Infographie/RENDU 6.1.jpg" />
+            <img class="photomontage_image" src="../../../RESSOURCES/1 - Infographie/RENDU 6.1.jpg" />
         </a>
     </div>
 
     <div class="dut_ligne_case">
-        <a class="dut_projet"> <img class="dut_projet_image" src="../../RESSOURCES/1 - Infographie/COVER 1.1.jpg" /></a>
-        <a class="dut_projet"> <img class="dut_projet_image" src="../../RESSOURCES/1 - Infographie/BACK COVER 1.2.jpg" /></a>
-        <a class="dut_projet"> <img class="dut_projet_image" src="../../RESSOURCES/1 - Infographie/BOOKLET 1.1.png" /></a>
-        <a class="dut_projet"> <img class="dut_projet_image" src="../../RESSOURCES/1 - Infographie/CD 1.3.png" /></a>
+        <a class="dut_projet"> <img class="dut_projet_image" src="../../../RESSOURCES/1 - Infographie/COVER 1.1.jpg" /></a>
+        <a class="dut_projet"> <img class="dut_projet_image" src="../../../RESSOURCES/1 - Infographie/BACK COVER 1.2.jpg" /></a>
+        <a class="dut_projet"> <img class="dut_projet_image" src="../../../RESSOURCES/1 - Infographie/BOOKLET 1.1.png" /></a>
+        <a class="dut_projet"> <img class="dut_projet_image" src="../../../RESSOURCES/1 - Infographie/CD 1.3.png" /></a>
     </div>
     <div class="row_simple">
         <div class="column_simple video" id="half">
-            <img class="gallerie_image" src="../../RESSOURCES/1 - Infographie/RENDU 1.3.jpg" />
+            <img class="gallerie_image" src="../../../RESSOURCES/1 - Infographie/RENDU 1.3.jpg" />
         </div>
+        <div class="column_space"></div>
         <div class="column_simple" id="half">
             <p class="explication_text">Puis comme il me restait du temps, j'ai aussi réalisé une cover d'album sur le thème d'Assassin's Creed Odyssey. <br> L'exercice était marrant et comme toujours, j'ai beaucoup appris en pratiquant.
             </p>
         </div>
     </div>
 
+    <br><br><br>
+
     <!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
-    <iframe class="include" src="../0commons/footer.html" seamless></iframe>
+    <iframe class="include" src="../../0commons/footer.html" seamless></iframe>
     <!------------------------------------------------------ SCRIPTS ------------------------------------------------>
     <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script src="../../js/flickity.pkgd.js"></script>
-    <script src="../../js/navbar.js"></script>
+    <script src="../../../js/navbar.js"></script>
     <!--------------------------------------------------------------------------------------------------------------->
 </body>
 
