--- a/html/INDEX/video.html
+++ b/html/INDEX/video.html
@@ -23,13 +23,21 @@
     <p class="presentation_text">Toutes les vidéos de ma chaîne YouTube sont disponibles ici. Il y a des making-of de photomontages, des vidéos faites en classe et des expérimentations de court-métrage.</p>
 
     <div class="video_total">
-        <iframe width="960" height="540px" class="video" src="https://www.youtube.com/embed/ozApC06xylI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe width="960" height="540px" class="video" src="https://www.youtube.com/embed/XvsrA4PbQlI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe width="960" height="540px" class="video" src="https://www.youtube.com/embed/Y_rxclOkZ1Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe width="960" height="540px" class="video" src="https://www.youtube.com/embed/JyeG7LvVOWo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe width="960" height="540px" class="video" src="https://www.youtube.com/embed/_JOVXJx4CW8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe width="960" height="540px" class="video" src="https://www.youtube.com/embed/FRcjSFYnp40" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+        <div class="row_simple">
+            <iframe width="700" height="400px" class="video" src="https://www.youtube.com/embed/ozApC06xylI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="column_space"></div>
+            <iframe width="700" height="400px" class="video" src="https://www.youtube.com/embed/XvsrA4PbQlI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="row_simple">
+            <iframe width="700" height="400px" class="video" src="https://www.youtube.com/embed/Y_rxclOkZ1Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="column_space"></div>
+            <iframe width="700" height="400px" class="video" src="https://www.youtube.com/embed/JyeG7LvVOWo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="row_simple">
+            <iframe width="700" height="400px" class="video" src="https://www.youtube.com/embed/_JOVXJx4CW8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="column_space"></div>
+            <iframe width="700" height="400px" class="video" src="https://www.youtube.com/embed/FRcjSFYnp40" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
     </div>
     <!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
