--- a/html/presentation.html
+++ b/html/presentation.html
@@ -42,14 +42,15 @@
         <div class="column_simple column_space"></div>
         <div class="column_simple" id="half">
             <h2 class="present_middle_present">Logiciels maîtrisés :</h2>
-            <div class="row_simple left">
+            <div class="row_simple left line_logo">
                 <img class="logo_comp" src="../RESSOURCES/logo/photoshop.png" width="10%">
                 <img class="logo_comp" src="../RESSOURCES/logo/illustrator.png" width="10%">
                 <img class="logo_comp" src="../RESSOURCES/logo/premiere pro.png" width="10%">
                 <img class="logo_comp" src="../RESSOURCES/logo/lightroom.png" width="10%">
                 <img class="logo_comp" src="../RESSOURCES/logo//after effects.png" width="10%">
             </div>
-            <div class="row_simple left">
+            <br>
+            <div class="row_simple left line_logo">
                 <img class="logo_comp" src="../RESSOURCES/logo/twinmotion.png" width="10%">
                 <img class="logo_comp" src="../RESSOURCES/logo/unity.png" width="10%">
                 <img class="logo_comp" src="../RESSOURCES/logo/blender.png" width="10%">
@@ -59,7 +60,8 @@
         </div>
 
     </div>
-    </div>
+    <br><br><br>
+
 
 
     <!------------------------------------------------------ FOOTER ------------------------------------------------------>
