modif url linkedin

--- a/html/presentation.html
+++ b/html/presentation.html
@@ -55,6 +55,7 @@
                 <img class="logo_comp" src="../RESSOURCES/logo/unity.png" width="10%">
                 <img class="logo_comp" src="../RESSOURCES/logo/blender.png" width="10%">
                 <img class="logo_comp" src="../RESSOURCES/logo/c4d.png" width="10%">
+                <img class="logo_comp" src="../RESSOURCES/logo/figma.svg" width="7%">
             </div>>
             <h2 class="present_middle_present">Soft skills :</h2>
         </div>
