--- a/html/0commons/footer.html
+++ b/html/0commons/footer.html
@@ -12,7 +12,7 @@
             <section class="social_menu">
                 <!------------------ ICONES RÉSEAUX -->
                 <ul>
-                    <li><a href="https://www.linkedin.com/in/alvina-damasio-razafiarizaka-510a981b8" target="_parent"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/alvina-dr" target="_parent"><i class="fa fa-linkedin"></i></a></li>
                     <li><a href="https://www.instagram.com/alvina.j.dr/" target="_parent"><i class="fa fa-instagram"></i></a></li>
                     <li><a href="https://www.youtube.com/channel/UCHbkynbDO8irEGk104XIbMA" target="_parent"><i class="fa fa-youtube"></i></a></li>
                 </ul>
